--- a/.github/workflows/switch.yml
+++ b/.github/workflows/switch.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       
     - name: Build code
       run: |
@@ -19,9 +19,9 @@ jobs:
           make -j
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: SDLPoP_Switch
         path: |
           SDLPoP.nro
-          src/GPLv3.h
+          LICENSE.txt
